fixed game input width on mobile view

--- a/index.css
+++ b/index.css
@@ -195,6 +195,7 @@ body {
     margin-top: 1.3rem;
     border:2px solid rgb(18, 59, 59);
     display: none;
+    width: 100%;
 }
 .game-input::placeholder {
     font-size: 1rem;
